[Fix] Font sizing and visibility

--- a/src/app/components/administration/create-movies/create-movies.component.scss
+++ b/src/app/components/administration/create-movies/create-movies.component.scss
@@ -76,7 +76,7 @@ h2 {
 }
 
 .textbox-content {
-  margin-top: 8px;
+  margin-top: 10px;
   margin-bottom: 32px;
   height: 48px;
   width: 100%;
@@ -87,6 +87,9 @@ h2 {
   font-size: 14px;
   padding-top: 10px;
   color: #ffffff;
+	height: 120px;
+	border: 3px solid #333333;
+	padding: 5px;
 }
 
 .genres-container {
@@ -205,6 +208,15 @@ h2 {
 .image-port img{
   width: 20em;
   border-radius: 1rem;
+}
+
+.inputs:focus,.textbox-content:focus{
+	border: 3px solid $primary;
+}
+
+.inputs,.textbox-content{
+  font-size: 18px;
+  font-weight: 400;
 }
 
 @media screen and (max-width: 1200px) {
